set(target FunctionHook)

if(WIN32)
    enable_language(ASM_MASM)
endif()

################################################################################
# Source groups
################################################################################

set(Sources
    "dllmain.c"
    "FunctionHook.c"
    "_penter_x64.asm"
    "FunctionHook.def"
)
source_group("Source Files" FILES ${Sources})

set(ALL_FILES
    ${Sources}
)

add_library(${target} SHARED ${ALL_FILES})

################################################################################
# Target
################################################################################

perfecthash_apply_common_settings(${target})

################################################################################
# Compile definitions
################################################################################

################################################################################
# Compile and link options
################################################################################
